fix: protect image upload route
